[package]
name = "user"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.4.2", features = ["runtime-actix-native-tls", "postgres"]}
actix-web = "3.3.2"
config = "0.11.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
rest = { path = "../adapters/rest" }
serde = { version = "1.0.130", features = ["derive"] }
persistence = {path = "../adapters/persistence"}
publish = {path = "../adapters/publish"}
anyhow = "1.0.45"
user-application = {path = "../user-application"}
password = {path = "../adapters/password"}
