[package]
name = "password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
async-trait = "0.1.51"
rand = "0.8.4"
rust-argon2 = "0.8.3"
user-application = {path = "../../user-application"}
