[package]
name = "password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
argon2 = "0.3.1"
async-trait = "0.1.51"
rand_core = {version = "0.6.3", features = ["std"]}
user-application = {path = "../../user-application"}
