[package]
name = "persistence"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.11"
anyhow = "1.0.45"
async-trait = "0.1.51"
chrono = "0.4.19"
log = "0.4.14"
sqlx = {version = "0.5.9", features = ["runtime-actix-native-tls", "postgres",
"macros", "uuid", "chrono", "tls", "offline"] }
thiserror = "1.0.30"
user-application = {path = "../../user-application"}
