[package]
name = "publish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
async-trait = "0.1.51"
lapin = "1.8.1"
log = "0.4.14"
user-application = {path = "../../user-application"}
