[package]
name = "rest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-web-validator = "2.2.0"
anyhow = "1.0.45"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
user-application = {path = "../../user-application"}
validator = {version = "0.12.0", features = ["derive"] }
